# forwarding-logger

./: Cargo.toml  LICENSE  README.md
src/: forwardedLogMessage.rs  forwardingLogger.rs  lib.rs
