# This file is part of forwarding-logger. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/forwarding-logger/master/COPYRIGHT. No part of forwarding-logger, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of forwarding-logger. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/forwarding-logger/master/COPYRIGHT.

[package]
name = "forwarding-logger"
description = "forwarding-logger"
keywords = ["forwarding-logger"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/forwarding-logger/blob/master/README.md"
homepage = "https://github.com/lemonrock/forwarding-logger"
repository = "https://github.com/lemonrock/forwarding-logger.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[replace]
"log:0.3.6" = { git = "https://github.com/lemonrock/log" }

[dependencies]
log = "0.3.6"
threading-support = { git = "https://github.com/lemonrock/threading-support" }
try-finally = { git = "https://github.com/lemonrock/try-finally" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
